Use guicey for HasZZZFeature interfaces binding to segregate scope of configuration.

--- a/api/src/main/resources/profiles/server-config-dev.properties
+++ b/api/src/main/resources/profiles/server-config-dev.properties
@@ -1,6 +1,7 @@
-profile="dev"
-importantProperty1="hashing depth"
-importantProperty2="secret pass suffix"
+buildProfile="dev"
+
+defaultCurrency="DEFAULT_USD"
+pageLimit=10
 maxAllowedResults=50
 
 http.port=8080
