--- a/api/src/main/resources/profiles/server-config-prod.properties
+++ b/api/src/main/resources/profiles/server-config-prod.properties
@@ -1,8 +1,9 @@
 # Truncated properties for fast failing. Production properties must be provided on demand when executing the app
 
-profile=0
-importantProperty1=0
-importantProperty2=0
-maxAllowedResults=0
+buildProfile=0
+
+defaultCurrency="DEFAULT_USD"
+pageLimit=10
+maxAllowedResults=50
 
 http.port=0
