--- a/api/src/main/resources/profiles/server-config-stage.properties
+++ b/api/src/main/resources/profiles/server-config-stage.properties
@@ -1,6 +1,7 @@
-profile="stage"
-importantProperty1="hashing depth"
-importantProperty2="secret pass suffix"
+buildProfile="stage"
+
+defaultCurrency="DEFAULT_USD"
+pageLimit=10
 maxAllowedResults=50
 
 http.port=8080
