--- a/api/src/main/resources/profiles/server-config-test.properties
+++ b/api/src/main/resources/profiles/server-config-test.properties
@@ -1,6 +1,7 @@
-profile="test"
-importantProperty1="hashing depth"
-importantProperty2="secret pass suffix"
+buildProfile="test"
+
+defaultCurrency="DEFAULT_USD"
+pageLimit=10
 maxAllowedResults=50
 
 http.port=8080
