--- a/api/src/main/resources/filters/overrider/empty.overrider.properties
+++ b/api/src/main/resources/filters/overrider/empty.overrider.properties
@@ -1,2 +1,2 @@
-# This file's purpose is only avoid filtering error when the second <filter> tag is left empty.
-# This file only is set by profiles: test, stage, and prod.
+# This file's only purpose is to avoid filtering error when the second <filter> tag is left empty at pom.xml
+# Only used by next profiles: test, stage, and prod.
