--- a/api/src/main/resources/filters/profiles/server-config-prod.properties
+++ b/api/src/main/resources/filters/profiles/server-config-prod.properties
@@ -2,8 +2,10 @@
 
 buildProfile=0
 
-defaultCurrency="DEFAULT_USD"
-pageLimit=10
-maxAllowedResults=50
+defaultCurrency=0
+pageLimit=0
+maxAllowedResults=0
 
 http.port=0
+
+swagger.enabled=0
