--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
 		<dropwizard.version>1.0.5</dropwizard.version>
 		<dropwizard.guicey.version>4.0.1</dropwizard.guicey.version>
 		<dropwizard.couchbase.version>0.2.3</dropwizard.couchbase.version>
+		<dropwizard.swagger.version>1.0.0-1</dropwizard.swagger.version>
+		<jersey.media.version>2.23.2</jersey.media.version> <!-- used by dropwizard-swagger. The internal one was excluded due to incompatibilities with hk2 -->
 		<jackson.version>2.8.4</jackson.version> <!-- see dependency hierarchy to know who is using other version -->
 		<commons.lang.version>2.6</commons.lang.version>
 		<commons.lang3.version>3.5</commons.lang3.version>
@@ -141,7 +143,41 @@
 				<version>${dropwizard.couchbase.version}</version>
 				<optional>true</optional>
 			</dependency>
-	
+
+			<dependency>
+				<groupId>com.smoketurner</groupId>
+				<artifactId>dropwizard-swagger</artifactId>
+				<version>${dropwizard.swagger.version}</version>
+				<optional>true</optional>
+				<exclusions>
+					<exclusion>
+						<groupId>com.google.code.findbugs</groupId>
+						<artifactId>annotations</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>com.google.code.findbugs</groupId>
+						<artifactId>jsr305</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>xml-apis</groupId>
+						<artifactId>xml-apis</artifactId>
+					</exclusion>
+					<!-- Exclude the entire dependency because it use hk2 which conflicts with the current version of dropwizard I'm using. -->
+					<!-- A new dependency is added as an external dependency -->
+					<exclusion>
+						<groupId>org.glassfish.jersey.media</groupId>
+						<artifactId>jersey-media-multipart</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+
+			<!-- used by dropwizard-swagger. The internal one was excluded due to incompatibilities with hk2 -->
+			<dependency>
+				<groupId>org.glassfish.jersey.media</groupId>
+				<artifactId>jersey-media-multipart</artifactId>
+				<version>${jersey.media.version}</version>
+			</dependency>
+
 			<dependency>
 				<groupId>io.dropwizard</groupId>
 				<artifactId>dropwizard-core</artifactId>
