New utils project for common and handy functions. It has its own test suite.

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -16,10 +16,13 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.buildNumber.skip>true</maven.buildNumber.skip>
 	</properties>
 	
 	<dependencies>
+
 		<!-- Add here dependencies with menu app api, protocol, etc -->
+
 	</dependencies>
 	
 	<build>
