--- a/protocol/pom.xml
+++ b/protocol/pom.xml
@@ -16,6 +16,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.buildNumber.skip>true</maven.buildNumber.skip>
 	</properties>
 
 	<dependencies>
