--- a/api/pom.xml
+++ b/api/pom.xml
@@ -32,6 +32,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>io.reactivex</groupId>
+			<artifactId>rxjava</artifactId>
+		</dependency>
+
+		<dependency>
             <groupId>ru.vyarus</groupId>
             <artifactId>dropwizard-guicey</artifactId>
         </dependency>
