--- a/api/pom.xml
+++ b/api/pom.xml
@@ -86,6 +86,11 @@
 			<artifactId>mockito-core</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<profiles>
