--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
 		<takari.cpsuite.version>1.2.7</takari.cpsuite.version>
 		<assertj.core.version>3.2.0</assertj.core.version>
 		<mockito.core.version>2.2.11</mockito.core.version>
+		<rest.assured.version>3.0.1</rest.assured.version>
 		<jacoco.version>0.7.7.201606060606</jacoco.version>
 	</properties>
 
@@ -310,6 +311,14 @@
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-core</artifactId>
 				<version>${mockito.core.version}</version>
+				<scope>test</scope>
+				<optional>true</optional>
+			</dependency>
+
+			<dependency>
+				<groupId>io.rest-assured</groupId>
+				<artifactId>rest-assured</artifactId>
+				<version>${rest.assured.version}</version>
 				<scope>test</scope>
 				<optional>true</optional>
 			</dependency>
