--- a/core/pom.xml
+++ b/core/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.fabri1983.menuapp</groupId>
 	<artifactId>core</artifactId>
 	<packaging>jar</packaging>
 	<name>Menu App Core</name>
-	<version>1.0.0-SNAPSHOT</version>
 	<url>https://github.com/fabri1983/menuapp</url>
 
 	<parent>
@@ -94,7 +94,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19.1</version>
+				<version>${maven.surefire.plugin.version}</version>
 				<configuration>
 					<includes>
                         <include>**/UnitTestsSuite.class</include>
