Add org.harmcrest for junit tests: use of some Matchers

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -1,7 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.fabri1983.menuapp</groupId>
 	<artifactId>api</artifactId>
 	<name>Menu App Api</name>
 	<url>https://github.com/fabri1983/menuapp</url>
@@ -84,6 +83,11 @@
 		<dependency>
 			<groupId>io.rest-assured</groupId>
 			<artifactId>rest-assured</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest</artifactId>
 		</dependency>
 		
 	</dependencies>
