--- a/pom.xml
+++ b/pom.xml
@@ -292,6 +292,14 @@
 			</dependency>
 
 			<dependency>
+				<groupId>org.hamcrest</groupId>
+				<artifactId>hamcrest</artifactId>
+				<version>2.1</version>
+				<scope>test</scope>
+				<optional>true</optional>
+			</dependency>
+
+			<dependency>
 				<groupId>org.openjdk.jmh</groupId>
 				<artifactId>jmh-core</artifactId>
 				<version>1.21</version>
