--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,34 @@
+sudo: false
 language: java
 
 jdk:
   - openjdk11
 
-# whitelist branches
 branches:
   only:
     - master
     - dev
 
-# overrides travis 'install' step
-# this installs dependencies. Using default profile
+cache:
+  directories:
+    - $HOME/.m2
+
+# Overrides travis 'install' step.
+# This installs dependencies using default profile.
 install:
   - java -version
-  - /usr/local/maven/bin/mvn --version
-  - sudo /usr/local/maven/bin/mvn --batch-mode clean install -DskipTests=true -Dmaven.buildNumber.skip=true
+  - mvn --version
+  - mvn --batch-mode clean compile -DskipTests=true -Dmaven.buildNumber.skip=true
 
 # overrides travis 'script' step
 script:
-  - sudo /usr/local/maven/bin/mvn --batch-mode clean package -Dmaven.buildNumber.skip=true
+  - mvn --batch-mode clean package -Dmaven.buildNumber.skip=true
 
 after_success:
   # using environment variable $repo_token set in travis web site
-  - sudo /usr/local/maven/bin/mvn clean test jacoco:report coveralls:report -DrepoToken=$repo_token -Dmaven.buildNumber.skip=true
+  - mvn clean test jacoco:report coveralls:report -DrepoToken=$repo_token -Dmaven.buildNumber.skip=true
   
 notifications:
-  email: false
+  email:
+    on_success: never
+    on_failure: always
