--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: false
 language: java
 
 jdk:
@@ -18,15 +17,15 @@ cache:
 install:
   - java -version
   - mvn --version
-  - mvn --batch-mode clean compile -DskipTests=true -Dmaven.buildNumber.skip=true
+  - sudo mvn --batch-mode clean compile -DskipTests=true -Dmaven.buildNumber.skip=true
 
 # overrides travis 'script' step
 script:
-  - mvn --batch-mode clean package -Dmaven.buildNumber.skip=true
+  - sudo mvn --batch-mode clean package -Dmaven.buildNumber.skip=true
 
 after_success:
   # using environment variable $repo_token set in travis web site
-  - mvn clean test jacoco:report coveralls:report -DrepoToken=$repo_token -Dmaven.buildNumber.skip=true
+  - sudo mvn clean test jacoco:report coveralls:report -DrepoToken=$repo_token -Dmaven.buildNumber.skip=true
   
 notifications:
   email:
