--- a/.travis.yml
+++ b/.travis.yml
@@ -17,15 +17,15 @@ cache:
 install:
   - java -version
   - mvn --version
-  - sudo mvn --batch-mode clean compile -DskipTests=true -Dmaven.buildNumber.skip=true
+  - sudo /usr/local/maven/bin/mvn --batch-mode clean compile -DskipTests=true -Dmaven.buildNumber.skip=true
 
 # overrides travis 'script' step
 script:
-  - sudo mvn --batch-mode clean package -Dmaven.buildNumber.skip=true
+  - sudo /usr/local/maven/bin/mvn --batch-mode clean package -Dmaven.buildNumber.skip=true
 
 after_success:
   # using environment variable $repo_token set in travis web site
-  - sudo mvn clean test jacoco:report coveralls:report -DrepoToken=$repo_token -Dmaven.buildNumber.skip=true
+  - sudo /usr/local/maven/bin/mvn clean test jacoco:report coveralls:report -DrepoToken=$repo_token -Dmaven.buildNumber.skip=true
   
 notifications:
   email:
