--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ script:
 
 after_success:
   # using environment variable $repo_token set in travis web site
-  - sudo /usr/local/maven/bin/mvn clean test jacoco:report coveralls:report -DrepoToken=$repo_token -Dmaven.buildNumber.skip=true
+  - sudo /usr/local/maven/bin/mvn clean test cobertura:cobertura coveralls:report -DrepoToken=$repo_token -Dmaven.buildNumber.skip=true
   
 notifications:
   email:
