--- a/pom.xml
+++ b/pom.xml
@@ -373,30 +373,6 @@
 					<doUpdate>false</doUpdate> <!-- use -Dmaven.buildNumber.doUpdate=... -->
 				</configuration>
 			</plugin>
-			
-			<plugin>
-				<groupId>org.eluder.coveralls</groupId>
-				<artifactId>coveralls-maven-plugin</artifactId>
-				<version>4.3.0</version>
-				<configuration>
-					<timestampFormat>EpochMillis</timestampFormat>
-					<!-- token provided by -D argument on .travis.yml from environment variable set up on Travis CI account -->
-					<repoToken></repoToken>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.4</version>
-				<executions>
-					<execution>
-						<id>prepare-agent</id>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -419,6 +395,28 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.7</version>
+				<configuration>
+					<format>xml</format>
+					<maxmem>256m</maxmem>
+					<!-- aggregated reports for multi-module projects -->
+					<aggregate>true</aggregate>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.eluder.coveralls</groupId>
+				<artifactId>coveralls-maven-plugin</artifactId>
+				<version>4.3.0</version>
+				<configuration>
+					<timestampFormat>EpochMillis</timestampFormat>
+					<!-- token provided by -D argument on .travis.yml from environment variable set up on Travis CI account -->
+					<repoToken></repoToken>
+				</configuration>
 			</plugin>
 
 			<plugin>
